[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Actor/Rock.gd" type="Script" id=1]
[ext_resource path="res://assets/Boulder_2.png" type="Texture" id=2]
[ext_resource path="res://assets/Boulder_1.png" type="Texture" id=3]
[ext_resource path="res://assets/charactor/Shadow.png" type="Texture" id=4]
[ext_resource path="res://assets/Down2.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Boulder_0.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 27 )

[sub_resource type="Animation" id=3]
resource_name = "wood"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.5, 1.5 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3, -47 ), Vector2( -3, -63 ) ]
}

[node name="Rock" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -3, -47 )
scale = Vector2( 0.2, 0.2 )
z_index = 8

[node name="Label" type="Label" parent="Node2D"]
margin_left = -20.0
margin_top = -5.0
margin_right = 20.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( 20, 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.999991, -47 )
scale = Vector2( 6, 3.86487 )
z_index = 1
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 78 )
z_index = 5
polygon = PoolVector2Array( -62, -90, -48, -134, -45, -134, -39, -138, -31, -142, -10, -143, 10, -140, 28, -134, 36, -125, 44, -112, 54, -105, 63, -92, 59, -87, 44, -82, 39, -76, 25, -75, 4, -78, -11, -80, -36, -81, -57, -87 )
__meta__ = {
"_edit_lock_": true
}

[node name="rock" type="AnimatedSprite" parent="."]
position = Vector2( 0, -45 )
scale = Vector2( 0.75, 0.793939 )
z_index = 4
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
z_index = 4
collision_layer = 0
collision_mask = 1025

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.337255, 0.14902, 0.14902, 1 )
position = Vector2( -7, -28 )
shape = SubResource( 2 )

[node name="Popup" type="AnimationPlayer" parent="."]
anims/wood = SubResource( 3 )

[node name="down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
